maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:91: error: ';' expected but integer literal found.
  var choix = 99 999
                 ^